--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,15 @@ layout: base.njk
 title: Raum für Menschlichkeit und Tiefe
 ---
 
-<div style="
+<style>
+@media (min-width: 769px) {
+  .hero-desktop {
+    padding-bottom: 4rem !important;
+  }
+}
+</style>
+
+<div class="hero-desktop" style="
   background-image: url('/images/hero.jpg');
   background-size: cover;
   background-position: center;
