--- a/src/index.njk
+++ b/src/index.njk
@@ -3,15 +3,7 @@ layout: base.njk
 title: Raum für Menschlichkeit und Tiefe
 ---
 
-<style>
-@media (min-width: 769px) {
-  .hero-desktop {
-    padding-bottom: 4rem !important;
-  }
-}
-</style>
-
-<div class="hero-desktop" style="
+<div style="
   background-image: url('/images/hero.jpg');
   background-size: cover;
   background-position: center;
