--- a/src/index.njk
+++ b/src/index.njk
@@ -19,6 +19,7 @@ title: Raum für Menschlichkeit und Tiefe
 
 @media (min-width: 769px) {
   .hero {
+    min-height: 100vh;
     padding-bottom: 4rem;
   }
 }
