--- a/src/index.njk
+++ b/src/index.njk
@@ -17,6 +17,12 @@ title: Raum für Menschlichkeit und Tiefe
   position: relative;
 }
 
+@media (max-width: 768px) {
+  .hero {
+    background-position: 70% center;
+  }
+}
+
 @media (min-width: 769px) {
   .hero {
     min-height: 100vh;
