--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,17 +95,19 @@ body {
     margin-bottom: 1.5rem;
 }
 
+/* Images in text content */
+.text-content img {
+    max-width: 800px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 3rem auto;
+    border-radius: 2px;
+}
+
 /* Text list */
 .text-list {
- 
-    
-    .text-content img {
-            max-width: 800px;
-            width: 100%;
-            height: auto;
-            display: block;
-            margin: 2rem auto;
-    }list-style: none;
+    list-style: none;
 }
 
 .text-item {
