--- a/src/_layouts/text.njk
+++ b/src/_layouts/text.njk
@@ -151,7 +151,7 @@ layout: base
         {% if excerpt %}
         <div class="text-excerpt">{{ excerpt }}</div>
         {% endif %}
-        <h1 class="text-title">{{ title }}</h1>
+        <h1 class="text-title">{{ title | nlToBr | safe }}</h1>
     </div>
     
     <div class="text-content">
